layout11 full-bleed layout with fixed-width

--- a/layout11-full-bleed layout with fixed-width content/style.css
+++ b/layout11-full-bleed layout with fixed-width content/style.css
@@ -77,6 +77,18 @@ img {
 	padding: 2em;
 }
 
+.twin {
+	padding: 2em;
+	background-color: #0093E9;
+  background-image: linear-gradient(160deg, #0093E9 0%, #80D0C7 100%);
+	color: #fff;
+}
+
+.twin:last-of-type {
+	background-color: #FBDA61;
+  background-image: linear-gradient(45deg, #FBDA61 0%, #FF5ACD 100%); 
+}
+
 @media screen and (min-width: 600px) {
 	.grid {
 		display: grid;
@@ -105,5 +117,8 @@ img {
 		width: 31%;
 	}
 
+	.twin {
+		grid-column: span 2;
+	}
 
 }
